update to index

--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <h3>Connect</h3>
     <p><a href="mailto: alzhan.braliyev@gmail.com">Send me email</a></p>
     <p><a href="https://www.instagram.com/alzhan_b1">Instagram</a></p>
+    <p><a href="https://www.youtube.com">YouTube</a></p>
+    <p><a href="https://www.youtube.com">YouTube</a></p>
   </body>
 </html>
