--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
           </div>
       </section>
 
+      <section id="projects" class="container">
+        <h2>Projects</h2>
+          <ul></ul>
+      </section>
+
       <section id="connect" class="container">
         <h2>Connect</h2>
           <div class="container-1 connect">
