--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#connect">Connect</a></li>
-            <li><a href="#leave_message">Leave a Message</a></li>        
+            <li><a href="#leave_message">Message</a></li>        
           </ul>
         </nav>
       </div> 
@@ -50,27 +51,24 @@
       <section id="experience" class="container">
         <h2>Experience</h2>
           <!-- <div class="experience"> -->
-            <div class="container-1">
+            <div class="container-1 experience">
                 <ul class="role">
                   <li class="card">
-                    <span>
-                      <strong>Software QA Engineer</strong>
-                      " -- Silkpay"
-                    </span>
+                    <!-- <span> -->
+                      <strong>Software QA Engineer</strong>Silkpay
+                    <!-- </span> -->
                     <span class="emphasis">01/2021 - 05/2022</span> 
                   </li>
                   <li class="card">
-                    <span>
-                      <strong>Software QA</strong>
-                      " -- KGS Space Technologies"
-                    </span>
+                    <!-- <span> -->
+                      <strong>Software QA</strong>KGS Space Technologies
+                    <!-- </span> -->
                     <span class="emphasis">11/2019 - 01/2021</span>
                   </li>
                   <li class="card">
-                    <span>
-                      <strong>QA Analyst</strong>
-                      " -- Kazakh Invest"
-                    </span>
+                    <!-- <span> -->
+                      <strong>QA Analyst</strong>Kazakh Invest
+                    <!-- </span>  -->
                     <span class="emphasis">04/2018 - 10/2019</span>
                   </li>
                 </ul>
@@ -87,7 +85,9 @@
 
       <section id="projects" class="container">
         <h2>Projects</h2>
-          <ul></ul>
+          <div class="container-1 projects">
+            <ul></ul>
+          </div>
       </section>
 
       <section id="connect" class="container">
@@ -120,7 +120,31 @@
           </div>
       </section>
 
-    <footer></footer>  
+    <footer>
+      <div class="container-2">
+        <nav2 class="nav2">
+          <ul class="menu">
+            <li class="socialMedias">
+              <a class="link" href="https://www.linkedin.com/in/al-braley/" target="_blank" title="LinkedIn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
+                  <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                  <rect x="2" y="9" width="4" height="12"></rect>
+                  <circle cx="4" cy="4" r="2"></circle>
+                </svg>
+              </a>
+            </li>
+            <li class="socialMedias">
+              <a class="link" href="https://github.com/Alzhan-B/eridanus-intro" target="_blank" title="GitHub">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github">
+                  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                  </path>
+                </svg>
+              </a>
+            </li>
+          </ul>  
+        </nav>
+      </div>
+    </footer>  
     <script src="js/index.js"></script>  
   </main>
   </body>
