--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 <ul class="role">
                   <li class="card">
                     <!-- <span> -->
-                      <strong>Software QA Engineer</strong>Silkpay
+                      <strong>Software QA Engineer</strong> Silkpay
                     <!-- </span> -->
-                    <span class="emphasis">01/2021 - 05/2022</span> 
+                      <span class="emphasis">01/2021 - 05/2022</span>   
                   </li>
                   <li class="card">
                     <!-- <span> -->
@@ -93,8 +93,8 @@
       <section id="connect" class="container">
         <h2>Connect</h2>
           <div class="container-1 connect">
-            <p><a href="mailto: alzhan.braliyev@gmail.com">Send email</a></p>
-            <p><a href="https://www.instagram.com/alzhan_b1">Instagram</a></p>
+            <p><a href="mailto: alzhan.braliyev@gmail.com" target="_blank">Send email</a></p>
+            <p><a href="https://www.instagram.com/alzhan_b1" target="_blank">Instagram</a></p>
           </div>
       </section>
 
